# tiss-tuwel-cli

./: IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
docs/: tiss_public_api.md
src/tiss_tuwel_cli/: __init__.py  __main__.py  config.py  participation_tracker.py  utils.py
src/tiss_tuwel_cli/cli/: __init__.py  auth.py  courses.py  dashboard.py  features.py  interactive.py  rc.py  settings.py  shell.py  timeline.py  todo.py
src/tiss_tuwel_cli/clients/: __init__.py  tiss.py  tuwel.py
