[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiss-tuwel-cli"
version = "1.0.0"
description = "Python CLI tool targeting TU Wien students for interacting with the public TISS API and TUWEL functions."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Simon Heppner - spheppner" }
]
keywords = ["tuwien", "tiss", "tuwel", "moodle", "cli", "university"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "requests>=2.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "selenium>=4.0.0",
    "InquirerPy>=0.3.4",
    "prompt_toolkit>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tiss-tuwel-cli = "tiss_tuwel_cli.cli:app"
tu-companion = "tiss_tuwel_cli.cli:app"

[project.urls]
Homepage = "https://github.com/spheppner/tiss-tuwel-cli"
Repository = "https://github.com/spheppner/tiss-tuwel-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tiss_tuwel_cli"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
